// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpenseList component test suite should render ExpenseList with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No expenses to show
      </span>
    </div>
  </div>
</div>
`;

exports[`ExpenseList component test suite should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={450}
      createdAt={0}
      description="Coffee"
      id="1"
      key="1"
      note="Dome, Wanneroo"
    />
    <ExpenseListItem
      amount={850}
      createdAt={-345600000}
      description="Pizza"
      id="2"
      key="2"
      note="Dominos"
    />
    <ExpenseListItem
      amount={425}
      createdAt={345600000}
      description="Tea bags"
      id="3"
      key="3"
      note="Coles"
    />
  </div>
</div>
`;
